Fix table is not showing properly in smartphone view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,10 @@ a:hover {
   text-decoration: none;
 }
 
+.table-yeet {
+  overflow: scroll;
+}
+
 h1,
 h2,
 h3,
